# obsidio

./: README.md  pyproject.toml
docs/: automation.md  cli.md  development.md  features.md  getting-started.md  python-api.md
obsidio/: __init__.py  __main__.py
