[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidio"
version = "0.0.0"
description = "Coming soon"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
keywords = ["placeholder"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
obsidio = "obsidio:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
